--- a/crud-angular/src/app/courses/courses/courses.component.scss
+++ b/crud-angular/src/app/courses/courses/courses.component.scss
@@ -5,3 +5,11 @@ table {
 .example-spacer {
   flex: 1 1 auto;
 }
+
+.loading-spinner {
+  padding: 25px;
+  background: rgba(0,0,0,0.15);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
