--- a/crud-angular/src/app/courses/courses/courses.component.html
+++ b/crud-angular/src/app/courses/courses/courses.component.html
@@ -22,7 +22,7 @@
       <ng-container matColumnDef="actions">
         <mat-header-cell *matHeaderCellDef>
           <button mat-mini-fab color="accent" aria-label="Adicionar um curso">
-            <mat-icon>add</mat-icon>
+            <mat-icon (click)="onAdd()">add</mat-icon>
           </button>
         </mat-header-cell>
         <mat-cell *matCellDef="let course">
