--- a/crud-angular/src/app/courses/course-form/course-form.component.html
+++ b/crud-angular/src/app/courses/course-form/course-form.component.html
@@ -1,9 +1,23 @@
-<form [formGroup]="form">
-  <mat-form-field>
-    <input matInput placeholder="Nome" formControlName="name">
-  </mat-form-field>
+<mat-card>
 
-  <mat-form-field>
-    <input matInput placeholder="Categoria" formControlName="category">
-  </mat-form-field>
-</form>
+  <mat-toolbar color="primary">
+      <span>Detalhes de Cursos</span>
+  </mat-toolbar>
+
+    <mat-card-content>
+      <form [formGroup]="form">
+        <mat-form-field class="full-width">
+          <input matInput placeholder="Nome" formControlName="name">
+        </mat-form-field>
+
+        <mat-form-field class="full-width">
+          <input matInput placeholder="Categoria" formControlName="category">
+        </mat-form-field>
+      </form>
+    </mat-card-content>
+
+    <mat-card-actions align="end">
+      <button mat-raised-button color="primary" (click)="onSubmit()">Salvar</button>
+      <button mat-raised-button (click)="onCancel()">Cancelar</button>
+    </mat-card-actions>
+</mat-card>
