--- a/crud-angular/src/app/courses/components/courses-list/courses-list.component.html
+++ b/crud-angular/src/app/courses/components/courses-list/courses-list.component.html
@@ -27,7 +27,7 @@
      </button>
 
      <button mat-icon-button color="warn" aria-label="Remover curso">
-       <mat-icon (click)="onDelete()">delete</mat-icon>
+       <mat-icon>delete</mat-icon>
      </button>
    </mat-cell>
  </ng-container>
