--- a/crud-angular/src/app/courses/containers/courses/courses.component.html
+++ b/crud-angular/src/app/courses/containers/courses/courses.component.html
@@ -1,11 +1,13 @@
 <mat-card>
-  <mat-toolbar color="primary"> Cursos Disponiveis</mat-toolbar>
+  <mat-toolbar color="primary">Cursos Disponíveis</mat-toolbar>
 
-  <div class="column-flex mat-elevation-z8">
-    <app-courses-list *ngIf="courses$ | async as courses; else loading"
-     [courses]="courses"
-     (add)="onAdd()"
-     (edit)="onEdit($event)"></app-courses-list>
+  <div class="example-container mat-elevation-z8">
+    <app-courses-list
+      *ngIf="courses$ | async as courses; else loading"
+      [courses]="courses"
+      (add)="onAdd()"
+      (edit)="onEdit($event)"
+    ></app-courses-list>
 
     <ng-template #loading>
       <div class="loading-spinner">
@@ -13,8 +15,4 @@
       </div>
     </ng-template>
   </div>
-
 </mat-card>
-
-
-
