--- a/crud-angular/src/app/courses/containers/course-form/course-form.component.html
+++ b/crud-angular/src/app/courses/containers/course-form/course-form.component.html
@@ -1,29 +1,36 @@
 <mat-card>
+  <mat-toolbar color="primary">Detalhes do Curso</mat-toolbar>
 
-  <mat-toolbar color="primary">
-      <span>Detalhes de Cursos</span>
-  </mat-toolbar>
+  <mat-card-content>
+    <form [formGroup]="form" class="min-width">
+      <mat-form-field class="full-width">
+        <input matInput placeholder="Nome" formControlName="name" #name />
+        <mat-hint align="end">{{ name.value?.length || 0 }} / 100</mat-hint>
+        <mat-error *ngIf="form.get('name')?.invalid">{{
+          getErrorMessage("name")
+        }}</mat-error>
+      </mat-form-field>
 
-    <mat-card-content>
-      <form [formGroup]="form" class="min-width">
-        <mat-form-field class="full-width">
-          <input matInput placeholder="Nome" formControlName="name">
-        </mat-form-field>
+      <mat-form-field class="full-width">
+        <mat-label>Categoria</mat-label>
+        <mat-select formControlName="category">
+          <mat-option value="null"> </mat-option>
+          <mat-option value="Front-end">Front-End</mat-option>
+          <mat-option value="Back-end">Back-End</mat-option>
+        </mat-select>
+        <mat-error *ngIf="form.get('category')?.invalid">{{
+          getErrorMessage("category")
+        }}</mat-error>
+      </mat-form-field>
+    </form>
+  </mat-card-content>
 
-        <mat-form-field class="full-width">
-          <mat-label>Categoria</mat-label>
-          <mat-select formControlName="category">
-            <mat-option value="null"></mat-option>
-            <mat-option value="front-end">Front-End</mat-option>
-            <mat-option value="back-end">Back-End</mat-option>
-          </mat-select>
-          <input matInput >
-        </mat-form-field>
-      </form>
-    </mat-card-content>
-
-    <mat-card-actions align="end">
-      <button mat-raised-button color="primary" (click)="onSubmit()">Salvar</button>
-      <button mat-raised-button (click)="onCancel()">Cancelar</button>
-    </mat-card-actions>
+  <mat-card-actions class="actions-center">
+    <button mat-raised-button color="primary" (click)="onSubmit()">
+      Salvar
+    </button>
+    <button mat-raised-button (click)="onCancel()" class="btn-space">
+      Cancelar
+    </button>
+  </mat-card-actions>
 </mat-card>
